# zcutils

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE.md  README.md
bench-results/: zcnblk-c8gn48-2nic-20260531T233244Z.tar.gz.sha256
bench-results/zcnblk-c8gn48-2nic-20260531T233244Z/: MANIFEST.txt  SHA256SUMS.txt
docs/: block-vs-userspace-bench-plan.md  cost-management-strategy.md  ec2-graviton-custom-kernel.md  ec2-latency-cpu-profiling.md  faq.md  nvme-slot-topology-todo.md  raft-ebpf-fastpath.md  raft-queue-topology.md  raid-primitives-tldr.md  real-world-speed-design.md  wal-extent-framing.md  zcbrd-c-modules.md  zcbrd-qemu.md  zcnblk-single-target-howto.md  zcnblk-zcbrd-high-iops-getting-started.md  zcutils-commands.md  zero-copy-descriptor.md
docs/man/: zcutils.1.md
ebpf/: Cargo.toml  Makefile  zc_raft_bpf_ctl.rs  zc_raft_fastpath_kern.rs
kernel/: Makefile  zcbrd_mod.c  zcstripe_mod.c
kmods/: .gitignore  Makefile  zcbrd_mod.c  zcnblk_client_mod.c  zcstripe_mod.c  zcwalblk_mod.c
scripts/: ec2-graviton-kernel-build.sh  ec2-graviton-kernel-deploy.sh  ec2-graviton-kernel-probe.sh  ec2-latency-cpu-profile.sh  ec2-ram-target-bench.sh  ec2-ram-topology-matrix.sh  ec2_perf_spot.py  h-local-secureboot-sign  qemu-arm64-kernel-smoke.sh  raft-netdevsim-lab.sh  test-zccusan-live-switch.sh  zc-profile-summarize.py  zc-raft-ebpf  zcbrd-fanout-fanin-bench.sh  zcbrd-logical-fanin-64.sh  zcraidd-wal-segment-matrix.sh
src/: fanout.rs  io_slots.rs  lib.rs  main.rs  window.rs
src/block/: control.rs  logstream.rs  mod.rs  zcnblk.rs
src/openapi/: zcblock-control.yaml
tools/: ibv_nullblk_sink_bench.c  libfabric_sink_bench.c  zcwalblk_cmd_bench.c
zccusan/: README.md
zccusan/charts/zcblock-csi/: Chart.yaml  README.md  values.yaml
zccusan/charts/zcblock-csi/templates/: NOTES.txt  _helpers.tpl  csidriver.yaml  daemonset.yaml  namespace.yaml  rbac.yaml  serviceaccount.yaml  snapshotclass.yaml  storageclasses.yaml
zccusan/deploy/zcblock-csi/: CRD-UPGRADES.md  Dockerfile  README.md  build-load-apply.sh  example-file-loop.yaml  example-raw-block.yaml  example-snapshot-restore.yaml  example-snapshot-source.yaml  example-snapshot.yaml  example.yaml  install-local-regions.sh  install-snapshot-api.sh  rbac-minimal.yaml  render-region-install.sh  snapshot-class.yaml  test-local-regions-cohesive.sh  test-local-regions-concurrent-c-receive.sh  test-local-regions-stream-repl.sh  uninstall-local-regions.sh  zcblock-csi.yaml
zccusan/docs/: streaming-replication-shaping.md  zccusan.md
