[package]
name = "zcutils"
version = "0.1.0"
edition = "2024"
autobins = false

[dependencies]
aws-lc-rs = "1.15"
libc = "0.2"
sha2 = "0.10"

[[bin]]
name = "zcutils"
path = "src/main.rs"

[[bin]]
name = "zcprobe"
path = "src/bin/zcprobe.rs"

[[bin]]
name = "zcnc"
path = "src/bin/zcnc.rs"

[[bin]]
name = "zc-tcpmux-send"
path = "src/bin/zc-tcpmux-send.rs"

[[bin]]
name = "zc-tcpmux-receive"
path = "src/bin/zc-tcpmux-receive.rs"

[[bin]]
name = "zc-tcpmux-xfer"
path = "src/bin/zc-tcpmux-xfer.rs"

[[bin]]
name = "zcdecrypt"
path = "src/bin/zcdecrypt.rs"

[[bin]]
name = "zcencrypt"
path = "src/bin/zcencrypt.rs"

[[bin]]
name = "zcmux"
path = "src/bin/zcmux.rs"

[[bin]]
name = "zcdemux"
path = "src/bin/zcdemux.rs"

[[bin]]
name = "zdmux"
path = "src/bin/zdmux.rs"

[[bin]]
name = "zdcemux"
path = "src/bin/zdcemux.rs"

[[bin]]
name = "zctee"
path = "src/bin/zctee.rs"

[[bin]]
name = "zcmaptee"
path = "src/bin/zcmaptee.rs"

[[bin]]
name = "zcmap"
path = "src/bin/zcmap.rs"

[[bin]]
name = "zcrun"
path = "src/bin/zcrun.rs"

[[bin]]
name = "zcflow"
path = "src/bin/zcflow.rs"

[[bin]]
name = "zcout"
path = "src/bin/zcout.rs"

[[bin]]
name = "zcsink"
path = "src/bin/zcsink.rs"

[[bin]]
name = "zccat"
path = "src/bin/zccat.rs"

[[bin]]
name = "zcgrep"
path = "src/bin/zcgrep.rs"

[[bin]]
name = "zcstat"
path = "src/bin/zcstat.rs"

[[bin]]
name = "zcmeter"
path = "src/bin/zcmeter.rs"

[[bin]]
name = "zcwritebench"
path = "src/bin/zcwritebench.rs"
