[package]
name = "zcutils"
version = "1.0.0"
edition = "2024"
autobins = false
description = "Linux zero-copy descriptor stream and io_uring utility experiments"
readme = "README.md"
license = "MIT OR Apache-2.0 OR BSD-2-Clause"

[dependencies]
aws-lc-rs = "1.15"
k8s-csi = "0.4.0"
libc = "0.2"
prost = "0.8"
prost-types = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1.0", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { version = "0.5", features = ["transport"] }

[[bin]]
name = "zcutils"
path = "src/main.rs"

[[bin]]
name = "zcprobe"
path = "src/bin/zcprobe.rs"

[[bin]]
name = "zcnc"
path = "src/bin/zcnc.rs"

[[bin]]
name = "zc-tcpmux-send"
path = "src/bin/zc-tcpmux-send.rs"

[[bin]]
name = "zc-tcpmux-receive"
path = "src/bin/zc-tcpmux-receive.rs"

[[bin]]
name = "zc-tcpmux-xfer"
path = "src/bin/zc-tcpmux-xfer.rs"

[[bin]]
name = "zcdecrypt"
path = "src/bin/zcdecrypt.rs"

[[bin]]
name = "zcencrypt"
path = "src/bin/zcencrypt.rs"

[[bin]]
name = "zcmux"
path = "src/bin/zcmux.rs"

[[bin]]
name = "zcdemux"
path = "src/bin/zcdemux.rs"

[[bin]]
name = "zdmux"
path = "src/bin/zdmux.rs"

[[bin]]
name = "zdcemux"
path = "src/bin/zdcemux.rs"

[[bin]]
name = "zctee"
path = "src/bin/zctee.rs"

[[bin]]
name = "zctier"
path = "src/bin/zctier.rs"

[[bin]]
name = "zcfanplan"
path = "src/bin/zcfanplan.rs"

[[bin]]
name = "zcjournal"
path = "src/bin/zcjournal.rs"

[[bin]]
name = "zcjournal-join"
path = "src/bin/zcjournal-join.rs"

[[bin]]
name = "zcjoin"
path = "src/bin/zcjoin.rs"

[[bin]]
name = "zcsnap"
path = "src/bin/zcsnap.rs"

[[bin]]
name = "zcmaptee"
path = "src/bin/zcmaptee.rs"

[[bin]]
name = "zcmap"
path = "src/bin/zcmap.rs"

[[bin]]
name = "zcforward"
path = "src/bin/zcforward.rs"

[[bin]]
name = "zcrun"
path = "src/bin/zcrun.rs"

[[bin]]
name = "zcflow"
path = "src/bin/zcflow.rs"

[[bin]]
name = "zcout"
path = "src/bin/zcout.rs"

[[bin]]
name = "zcsink"
path = "src/bin/zcsink.rs"

[[bin]]
name = "zccat"
path = "src/bin/zccat.rs"

[[bin]]
name = "zcgrep"
path = "src/bin/zcgrep.rs"

[[bin]]
name = "zcstat"
path = "src/bin/zcstat.rs"

[[bin]]
name = "zcmeter"
path = "src/bin/zcmeter.rs"

[[bin]]
name = "zcwritebench"
path = "src/bin/zcwritebench.rs"

[[bin]]
name = "zcraid-split"
path = "src/bin/zcraid-split.rs"

[[bin]]
name = "zcraid-merge"
path = "src/bin/zcraid-merge.rs"

[[bin]]
name = "zcraid-fanoutd"
path = "src/bin/zcraid-fanoutd.rs"

[[bin]]
name = "zcraid-fanind"
path = "src/bin/zcraid-fanind.rs"

[[bin]]
name = "zcraidd"
path = "src/bin/zcraidd.rs"

[[bin]]
name = "zcblock-csi"
path = "src/bin/zcblock-csi.rs"

[[bin]]
name = "zcblock-control"
path = "src/bin/zcblock-control.rs"

[[bin]]
name = "zcblock-freeze"
path = "src/bin/zcblock-freeze.rs"

[[bin]]
name = "zcrepl"
path = "src/bin/zcrepl.rs"

[[bin]]
name = "zcpit"
path = "src/bin/zcpit.rs"
